--- a/HTML/day2.html
+++ b/HTML/day2.html
@@ -11,6 +11,7 @@
   <!-- 
     Content : HTML 
       - TEXT CONTENT 
+          - Heading 
           - PARA
 
       - MEDIA CONTENT 
@@ -60,7 +61,7 @@
     <button>GOTO GOOGLE</button>
   </a>
 
-  <!-- Void Element : Self Closing Tag ==> <br/>-->
+  <!-- Void Element : Self Closing Tag ==> <br/> <img/>-->
 
   <!-- List : 
     order List  : ol
@@ -85,8 +86,8 @@
     <li>Banana</li>
   </ol>
 
-  <!-- Form -->
 
+  <!-- Form -->
   <form action="/day1.html">
     <!-- Press Enter or Form Submit Button Click : Sumbit Event Trigger -> Db -->
 
@@ -102,7 +103,6 @@
 
     <button type="submit">Submit</button>
   </form>
-
 </body>
 
 </html>
